NetBSD Problem Report #42585

From bernd@arresum.veego.de  Wed Jan  6 14:50:10 2010
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 766AD63C37E
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  6 Jan 2010 14:50:10 +0000 (UTC)
Message-Id: <201001061449.o06EnnlR027482@arresum.veego.de>
Date: Wed, 6 Jan 2010 15:49:49 +0100 (CET)
From: Bernd Ernesti <pr201001@veego.de>
Reply-To: Bernd Ernesti <pr201001@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: linux emul panic while installing pkgsrc/net/citrix_ica
X-Send-Pr-Version: 3.95

>Number:         42585
>Category:       port-i386
>Synopsis:       linux emul panic while installing pkgsrc/net/citrix_ica
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 06 14:55:00 +0000 2010
>Closed-Date:    Sat Jun 12 18:14:47 +0000 2010
>Last-Modified:  Thu Jan 05 09:50:12 +0000 2012
>Originator:     Bernd Ernesti
>Release:        NetBSD 5.0_STABLE 20091223 && pkgsrc 20100106
>Organization:

>Environment:
System: NetBSD 5.0_STABLE
Architecture: i386
Machine: i386
>Description:
	I get a panic while installing citrix_ica (all are typed in because crash still
	does not work here with raid on ahcisata).
	This is reproduceable.

uvm_fault(0xc0a10740, 0xfffff000, 1) -> 0xe
fatal page fault in supervisor mode
trap type 6 code 0 eip c0669cd7 cs 8 eflags 10213 cr2 fffffff8 ilevel 0
kernel: supervisor trap page fault, code=0
Stopped in pid 4861.1 (echo_cmd) at netbsd:linux_ioctl_socket+0x57: movl 0xfffffff8(%ebp),%esi

	There is no backtrace on cpu 1 where echo_cmd was running.
	cpu 0 has this backtrace (maybe because I was running the installation from another
	machine).

	bt cpu 0:
lapic_getttick
wm_gmii_i82544_readreg
mii_phy_tick
igphy_service
mii_tick
wm_tick
callout_softclock
softint_dispatch

(gdb) list *(0xc0669cd7)
0xc0669cd7 is in linux_ioctl_socket (/src/sys/compat/linux/common/linux_socket.c:1267).
1262                    SCARG(&ia, data) = SCARG(uap, data);
1263                    error = sys_ioctl(curlwp, &ia, retval);
1264            }
1265    
1266            return error;
1267    }
1268    
1269    int
1270    linux_sys_connect(struct lwp *l, const struct linux_sys_connect_args *uap, register_t *retval)
1271    {

0xc0669cc4 <linux_ioctl_socket+68>:     jbe    0xc0669ce4 <linux_ioctl_socket+100>
0xc0669cc6 <linux_ioctl_socket+70>:     mov    (%esi),%eax
0xc0669cc8 <linux_ioctl_socket+72>:     mov    $0x16,%ebx
0xc0669ccd <linux_ioctl_socket+77>:     mov    %eax,(%esp)
0xc0669cd0 <linux_ioctl_socket+80>:     call   0xc0472d20 <fd_putfile>
0xc0669cd5 <linux_ioctl_socket+85>:     mov    %ebx,%eax
0xc0669cd7 <linux_ioctl_socket+87>:     mov    0xfffffff8(%ebp),%esi
0xc0669cda <linux_ioctl_socket+90>:     mov    0xfffffff4(%ebp),%ebx
0xc0669cdd <linux_ioctl_socket+93>:     mov    0xfffffffc(%ebp),%edi
0xc0669ce0 <linux_ioctl_socket+96>:     mov    %ebp,%esp
0xc0669ce2 <linux_ioctl_socket+98>:     pop    %ebp
0xc0669ce3 <linux_ioctl_socket+99>:     ret    


>How-To-Repeat:
	cd pkgsrc/net/citrix_ica
	make install
>Fix:

>Release-Note:

>Audit-Trail:

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-i386/42585: linux emul panic while installing
	pkgsrc/net/citrix_ica
Date: Mon, 15 Feb 2010 19:16:53 +0000

 On Wed, Jan 06, 2010 at 02:55:00PM +0000, Bernd Ernesti wrote:
  > uvm_fault(0xc0a10740, 0xfffff000, 1) -> 0xe
  > fatal page fault in supervisor mode
  > trap type 6 code 0 eip c0669cd7 cs 8 eflags 10213 cr2 fffffff8 ilevel 0
  > kernel: supervisor trap page fault, code=0
  > Stopped in pid 4861.1 (echo_cmd) at netbsd:linux_ioctl_socket+0x57: movl 0xfffffff8(%ebp),%esi
  > [...]
  > 0xc0669cd7 <linux_ioctl_socket+87>:     mov    0xfffffff8(%ebp),%esi
  > 0xc0669cda <linux_ioctl_socket+90>:     mov    0xfffffff4(%ebp),%ebx
  > 0xc0669cdd <linux_ioctl_socket+93>:     mov    0xfffffffc(%ebp),%edi
  > 0xc0669ce0 <linux_ioctl_socket+96>:     mov    %ebp,%esp
  > 0xc0669ce2 <linux_ioctl_socket+98>:     pop    %ebp
  > 0xc0669ce3 <linux_ioctl_socket+99>:     ret    

 Looks like NULL in %ebp? Would have been nice to know for sure what
 was in %ebp and %esp, because theoretically it should be hard to get
 null in there.

 Maybe mismatched use of -fomit-frame-pointer? Doesn't seem very likely...

 -- 
 David A. Holland
 dholland@netbsd.org

From: Nick Hudson <nick.hudson@gmx.co.uk>
To: gnats-bugs@netbsd.org
Cc: port-i386-maintainer@netbsd.org,
 gnats-admin@netbsd.org,
 netbsd-bugs@netbsd.org
Subject: Re: port-i386/42585: linux emul panic while installing pkgsrc/net/citrix_ica
Date: Fri, 11 Jun 2010 17:10:03 +0100

 --Boundary-00=_b/lEMTKcJMQLtD+
 Content-Type: text/plain;
   charset="iso-8859-1"
 Content-Transfer-Encoding: 7bit

 On Wednesday 06 January 2010 14:55:00 Bernd Ernesti wrote:
 > >Number:         42585
 > >Category:       port-i386
 > >Synopsis:       linux emul panic while installing pkgsrc/net/citrix_ica

 Here's a diff.

 Nick

 --Boundary-00=_b/lEMTKcJMQLtD+
 Content-Type: text/x-patch;
   charset="iso-8859-1";
   name="diff"
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
 	filename="diff"

 Index: net/if.c
 ===================================================================
 RCS file: /cvsroot/src/sys/net/if.c,v
 retrieving revision 1.243
 diff -u -p -u -r1.243 if.c
 --- net/if.c	2 Jun 2010 23:41:14 -0000	1.243
 +++ net/if.c	11 Jun 2010 16:08:11 -0000
 @@ -1817,7 +1817,7 @@ ifioctl(struct socket *so, u_long cmd, v
  	}
  #ifdef COMPAT_OIFREQ
  	if (cmd != ocmd)
 -		ifreqn2o(oifr, ifr);
 +		ifreqn2o(ifr, oifr);
  #endif

  	return error;

 --Boundary-00=_b/lEMTKcJMQLtD+--

From: Bernd Ernesti <pr201001@veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-i386/42585: linux emul panic while installing pkgsrc/net/citrix_ica
Date: Fri, 11 Jun 2010 18:41:56 +0200

 On Fri, Jun 11, 2010 at 04:15:04PM +0000, Nick Hudson wrote:
 >  Here's a diff.

 That fixed it for me with netbsd-5 where the line number were a little different.

 Index: if.c
 ===================================================================
 RCS file: /cvsroot/src/sys/net/if.c,v
 retrieving revision 1.230.4.2
 diff -b -u -r1.230.4.2 if.c
 --- if.c	28 Nov 2009 15:47:05 -0000	1.230.4.2
 +++ if.c	11 Jun 2010 16:40:33 -0000
 @@ -1713,7 +1713,7 @@
  	}
  #ifdef COMPAT_OIFREQ
  	if (cmd != ocmd)
 -		ifreqn2o(oifr, ifr);
 +		ifreqn2o(ifr, oifr);
  #endif

  	return error;

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42585 CVS commit: src/sys/net
Date: Sat, 12 Jun 2010 08:12:03 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sat Jun 12 08:12:03 UTC 2010

 Modified Files:
 	src/sys/net: if.c

 Log Message:
 Correct the argument order of ifreqn2o conversion.

 Fixes PR/42585.


 To generate a diff of this commit:
 cvs rdiff -u -r1.243 -r1.244 src/sys/net/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sat, 12 Jun 2010 09:06:01 +0000
State-Changed-Why:
Fixed in HEAD and waiting on ticket #1416.


From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42585 CVS commit: [netbsd-5] src/sys/net
Date: Sat, 12 Jun 2010 16:37:55 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sat Jun 12 16:37:55 UTC 2010

 Modified Files:
 	src/sys/net [netbsd-5]: if.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1416):
 	sys/net/if.c: revision 1.244
 Correct the argument order of ifreqn2o conversion.
 Fixes PR/42585.


 To generate a diff of this commit:
 cvs rdiff -u -r1.230.4.2 -r1.230.4.3 src/sys/net/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: veego@NetBSD.org
State-Changed-When: Sat, 12 Jun 2010 18:14:47 +0000
State-Changed-Why:
pullup is done


From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42585 CVS commit: [netbsd-5] src/sys/net
Date: Thu, 5 Jan 2012 09:47:39 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Thu Jan  5 09:47:39 UTC 2012

 Modified Files:
 	src/sys/net [netbsd-5]: if.c

 Log Message:
 Pull up the following revisions(s) (requested by obache in ticket #1708):
 	sys/net/if.c:	revision 1.246

 PR/44030: ifreqn2o gets called with the parameters the wrong way around.
 Reverts fix for PR 42585 (ticket #1416) as the root cause of the crash is
 addressed by PR 44054 (pullup #1541).


 To generate a diff of this commit:
 cvs rdiff -u -r1.230.4.5 -r1.230.4.6 src/sys/net/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.