Correct the argument order of ifreqn2o conversion.

Fixes PR/42585.